--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ bidict==0.23.1
 blinker==1.9.0
 click==8.3.0
 colorama==0.4.6
+dnspython==2.8.0
+eventlet==0.40.3
 Flask==3.1.2
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
