--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ migrations/
 library_app/static/images/quizes/*
 !library_app/static/images/quizes
 !library_app/static/images/quizes/default.svg
+library_app/static/images/questions/*
