--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ cffi==2.0.0
 click==8.3.0
 colorama==0.4.6
 dnspython==2.8.0
+dotenv==0.9.9
 Flask==3.1.2
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
@@ -22,6 +24,7 @@ MarkupSafe==3.0.2
 packaging==25.0
 pillow==11.3.0
 pycparser==2.23
+python-dotenv==1.2.1
 python-engineio==4.12.2
 python-socketio==5.13.0
 setuptools==80.9.0
