--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.16.5
 bidict==0.23.1
 blinker==1.9.0
+certifi==2025.10.5
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
 dnspython==2.8.0
@@ -17,6 +19,7 @@ gevent-websocket==0.10.1
 greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
@@ -27,10 +30,13 @@ pycparser==2.23
 python-dotenv==1.2.1
 python-engineio==4.12.2
 python-socketio==5.13.0
+requests==2.32.5
+resend==2.19.0
 setuptools==80.9.0
 simple-websocket==1.1.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 zope.event==6.0
