--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,32 @@
-alembic==1.16.5
+alembic==1.17.2
 bidict==0.23.1
 blinker==1.9.0
 brevo-python==1.2.0
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
+certifi==2025.11.12
+click==8.3.1
 colorama==0.4.6
 dnspython==2.8.0
 dotenv==0.9.9
+eventlet==0.40.4
 Flask==3.1.2
 Flask-Login==0.6.3
-Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
-gevent==25.9.1
-gevent-websocket==0.10.1
-greenlet==3.2.4
-gunicorn==23.0.0
+greenlet==3.3.0
 h11==0.16.0
-idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
-MarkupSafe==3.0.2
-packaging==25.0
-pillow==11.3.0
-pycparser==2.23
+MarkupSafe==3.0.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
-python-engineio==4.12.2
-python-socketio==5.13.0
-requests==2.32.5
-resend==2.19.0
-setuptools==80.9.0
-sib-api-v3-sdk==7.6.0
+python-engineio==4.12.3
+python-socketio==5.15.1
 simple-websocket==1.1.0
 six==1.17.0
-SQLAlchemy==2.0.43
+SQLAlchemy==2.0.45
 typing_extensions==4.15.0
-urllib3==2.5.0
-Werkzeug==3.1.3
-wsproto==1.2.0
-zope.event==6.0
-zope.interface==8.0.1
+urllib3==2.6.2
+Werkzeug==3.1.4
+wsproto==1.3.2
