--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-MAIL_USERNAME=YOUR_EMAIL
-BREVO-API-KEY="xkeysib-YOUR_API_KEY"
+MAIL_SERVER="YOUR_SMTP_SERVER_EG_smtp.gmail.com"
+MAIL_PORT=PORT_NUMBER_EG_587
+MAIL_USE_TLS=True
+MAIL_USERNAME="YOUR_GMAIL_ADDRESS"   
+MAIL_PASSWORD="YOUR_APP_PASSWORD_FOR_GMAIL_APP" 
 SECRET_KEY="YOUR_SECRET_KEY"
 PORT=YOUR_PORT_NUMBER_EG_5000
