--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,13 @@ Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.3.0
+gunicorn==25.1.0
 h11==0.16.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
+packaging==26.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-engineio==4.12.3
